feat: made frontend server an esm module

--- a/frontend/server/package.json
+++ b/frontend/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node --env-file=./.env index.js"
   },
-  "author": "",
+  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
