--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "express": "^4.21.1",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
