--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.1.7",
     "@mui/styled-engine-sc": "^6.1.7",
     "axios": "^1.7.7",
+    "http-status-codes": "^2.3.0",
     "javascript-time-ago": "^2.5.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
