--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "express": "^4.21.1",
+    "http-status-codes": "^2.3.0",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "sqlite3": "^5.1.7"
