--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "dev": "vite",
     "preview": "vite preview",
     "serve": "npm run build && serve --no-clipboard --single ../dist -p 3000"
