--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -14,7 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.7",
+    "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.7",
     "@mui/styled-engine-sc": "^6.1.7",
     "axios": "^1.7.7",
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
